--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "heroku-postbuild": "npm run generate"
   },
   "dependencies": {
-    "bootstrap-vue": "^2.0.0-rc.11",
-    "bootstrap": "^4.1.3",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
-    "nuxt": "^2.0.0"
+    "bootstrap": "^4.1.3",
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "nuxt": "^2.0.0",
+    "nuxt-compress": "^1.0.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
